examples/compiler_errors/ExtraModuleCode.flx
// expect: compile_error
// expect-error: E028

module ExtraModuleCode {
    fn value() -> Int {
        1
    }
}

fn stray() -> Int {
    2
}
